[wip] implement a route for copying published spells from other users
